crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLR1722_sys_exit_alias_14.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR1722 Use `sys.exit()` instead of `exit`
 --> sys_exit_alias_14.py:2:1
  |
2 | exit(**code)
  | ^^^^
  |
help: Replace `exit` with `sys.exit()`
