crates/ruff_linter/src/rules/pylint/snapshots/ruff_linter__rules__pylint__tests__PLR1722_sys_exit_alias_5.py.snap
---
source: crates/ruff_linter/src/rules/pylint/mod.rs
---
PLR1722 [*] Use `sys.exit()` instead of `exit`
 --> sys_exit_alias_5.py:3:1
  |
1 | from sys import *
2 |
3 | exit(0)
  | ^^^^
4 | quit(0)
  |
help: Replace `exit` with `sys.exit()`
  |
2 + import sys
3 + 
4 ~ sys.exit(0)
  |
note: This is an unsafe fix and may change runtime behavior

PLR1722 [*] Use `sys.exit()` instead of `quit`
 --> sys_exit_alias_5.py:4:1
  |
3 | exit(0)
4 | quit(0)
  | ^^^^
help: Replace `quit` with `sys.exit()`
  |
2 + import sys
3 + 
4 | exit(0)
5 ~ sys.exit(0)
  |
note: This is an unsafe fix and may change runtime behavior

PLR1722 [*] Use `sys.exit()` instead of `exit`
 --> sys_exit_alias_5.py:8:5
  |
7 | def main():
8 |     exit(1)
  |     ^^^^
9 |     quit(1)
  |
help: Replace `exit` with `sys.exit()`
  |
2 + import sys
3 + 
4 | exit(0)
…
8 | def main():
9 ~     sys.exit(1)
  |
note: This is an unsafe fix and may change runtime behavior

PLR1722 [*] Use `sys.exit()` instead of `quit`
 --> sys_exit_alias_5.py:9:5
  |
7 | def main():
8 |     exit(1)
9 |     quit(1)
  |     ^^^^
help: Replace `quit` with `sys.exit()`
   |
 2 + import sys
 3 + 
 4 | exit(0)
 …
 9 |     exit(1)
10 ~     sys.exit(1)
   |
note: This is an unsafe fix and may change runtime behavior
